--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-      <p>Here you can find several recipes.</p>
+      <p>Here you can find several nice recipes.</p>
   </body>
 
 
