--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-      <p>Here you can find several nice recipes.</p>
+    <p>Here you can find several nice recipes.</p>
+    <ul>
+      <li> <a href="recipes/pizza.html">Pizza Recipe</a> </li>
+      <li><a href="recipes/rice.html">Rice Recipe</a> </li>
+
+    </ul>
+
   </body>
 
 
