--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF 8">
   </head>
   <body>
+
+* {
+  color: purple;
+}
+
     <h1>Odin Recipes</h1>
     <p>Here you can find several nice recipes.</p>
     <ul>
