Add CSS styling to recipe home page

--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF 8">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-
-* {
-  color: purple;
-}
-h1 {
-  color: red;
-}
-
+<!-- Conventions for comments are different for html, css and js-->
     <h1>Odin Recipes</h1>
-    <p>Here you can find several nice recipes.</p>
+    <p class="big-letters">Here you can find several nice recipes.</p>
     <ul>
-      <li> <a href="recipes/pizza.html">Pizza Recipe</a> </li>
-      <li><a href="recipes/rice.html">Rice Recipe</a> </li>
-
+      <li class="list-recipe"> <a href="recipes/pizza.html">Pizza Recipe</a> </li>
+      <li class="list-recipe"><a href="recipes/rice.html">Rice Recipe</a> </li>
     </ul>
+
+    <div class="alert-text big-letters">
+      Please enjoy these succulent meals.
+    </div>
+<img src="toni.jpg" alt="young toni"></img>
+
+    <div id="title">
+      But also don't forget to work out!
+    </div>
+
 
   </body>
 
